LogIn And LogOut Configure

--- a/TestingMVC/TestingMVC.csproj
+++ b/TestingMVC/TestingMVC.csproj
@@ -5,22 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Migrations\20201021105801_App_inition.cs" />
-    <Compile Remove="Migrations\20201021105801_App_inition.Designer.cs" />
-    <Compile Remove="Migrations\20201021121736_App_inition.cs" />
-    <Compile Remove="Migrations\20201021121736_App_inition.Designer.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.9">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
