--- a/TestingMVC/appsettings.json
+++ b/TestingMVC/appsettings.json
@@ -1,10 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            //"Default": "Warning",
+            //"Microsoft": "Waring",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
   "AllowedHosts": "*"
 }
