launchSetting.json icherisi deyishildi

--- a/TestingMVC/appsettings.json
+++ b/TestingMVC/appsettings.json
@@ -2,9 +2,9 @@
     "Logging": {
         "LogLevel": {
             "Default": "Information",
-            "Microsoft": "Warning",
+            //"Microsoft": "Warning",
             //"Default": "Warning",
-            //"Microsoft": "Waring",
+            "Microsoft": "Waring",
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
