--- a/TestingMVC/Properties/launchSettings.json
+++ b/TestingMVC/Properties/launchSettings.json
@@ -1,79 +1,79 @@
-//{
-//  "iisSettings": {
-//    "windowsAuthentication": false,
-//    "anonymousAuthentication": true,
-//    "iisExpress": {
-//      "applicationUrl": "https://localhost:44360/",
-//      "sslPort": 44360
-//    }
-//  },
-//  "profiles": {
-//    "IIS Express": {
-//      "commandName": "IISExpress",
-//      "launchBrowser": true,
-//      "environmentVariables": {
-//        "ASPNETCORE_ENVIRONMENT": "Development"
-//      }
-//    },
-//    "TestingMVC": {
-//      "commandName": "Project",
-//      "launchBrowser": true,
-//      "environmentVariables": {
-//        "ASPNETCORE_ENVIRONMENT": "Development"
-//      },
-//      "applicationUrl": "https://localhost:5001;http://localhost:5000"
-//    }
-//  }
-//}
-
 {
-    "iisSettings": {
-        "windowsAuthentication": false,
-        "anonymousAuthentication": true,
-        "iisExpress": {
-            "applicationUrl": "http://localhost:64645",
-            "sslPort": 44366
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "https://localhost:44360/",
+      "sslPort": 44360
+    }
+  },
+  "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Production"
         }
     },
-    "profiles": {
-        "IIS Express": {
-            "commandName": "IISExpress",
-            "launchBrowser": true,
-            "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            }
-        },
-        "IISX-Production": {
-            "commandName": "IISExpress",
-            "launchBrowser": true,
-            "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Production"
-            }
-        },
-        "IISX-Staging": {
-            "commandName": "IISExpress",
-            "launchBrowser": true,
-            "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Staging",
-                "ASPNETCORE_DETAILEDERRORS": "1",
-                "ASPNETCORE_SHUTDOWNTIMEOUTSECONDS": "3"
-            }
-        },
-        "EnvironmentsSample": {
-            "commandName": "Project",
-            "launchBrowser": true,
-            "applicationUrl": "https://localhost:5001;http://localhost:5000",
-            "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            }
-        },
-        "KestrelStaging": {
-            "commandName": "Project",
-            "launchBrowser": true,
-            "applicationUrl": "https://localhost:5001;http://localhost:5000",
-            "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Staging"
-            }
+    "TestingMVC": {
+        "commandName": "Project",
+        "launchBrowser": true,
+        "applicationUrl": "https://localhost:5001;http://localhost:5000",
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Development"
         }
     }
+  }
 }
+
+//{
+//    "iisSettings": {
+//        "windowsAuthentication": false,
+//        "anonymousAuthentication": true,
+//        "iisExpress": {
+//            "applicationUrl": "http://localhost:64645",
+//            "sslPort": 44366
+//        }
+//    },
+//    "profiles": {
+//        "IIS Express": {
+//            "commandName": "IISExpress",
+//            "launchBrowser": true,
+//            "environmentVariables": {
+//                "ASPNETCORE_ENVIRONMENT": "Development"
+//            }
+//        },
+//        "IISX-Production": {
+//            "commandName": "IISExpress",
+//            "launchBrowser": true,
+//            "environmentVariables": {
+//                "ASPNETCORE_ENVIRONMENT": "Production"
+//            }
+//        },
+//        "IISX-Staging": {
+//            "commandName": "IISExpress",
+//            "launchBrowser": true,
+//            "environmentVariables": {
+//                "ASPNETCORE_ENVIRONMENT": "Staging",
+//                "ASPNETCORE_DETAILEDERRORS": "1",
+//                "ASPNETCORE_SHUTDOWNTIMEOUTSECONDS": "3"
+//            }
+//        },
+//        "EnvironmentsSample": {
+//            "commandName": "Project",
+//            "launchBrowser": true,
+//            "applicationUrl": "https://localhost:5001;http://localhost:5000",
+//            "environmentVariables": {
+//                "ASPNETCORE_ENVIRONMENT": "Development"
+//            }
+//        },
+//        "KestrelStaging": {
+//            "commandName": "Project",
+//            "launchBrowser": true,
+//            "applicationUrl": "https://localhost:5001;http://localhost:5000",
+//            "environmentVariables": {
+//                "ASPNETCORE_ENVIRONMENT": "Staging"
+//            }
+//        }
+//    }
+//}
